# Juniorweb-downloader

./: .env.example  .gitignore  config.py  file_list.json  main.py  pyproject.toml  requirements.txt  test_ntfy.py  utils.py
.github/workflows/: payroll_check.yml
